--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "vercel-build": "npm install -g npm@15.14.10 && npm install && next build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "engines": {
+    "node": ">=14.0.0 <18.0.0"
   },
   "eslintConfig": {
     "extends": [
