--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "engines": {
+    "node": "15.14.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "predeploy": "npm run build",
