--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-travel",
-  "homepage": "http://aditya-dahal.github.io/react-travel",
+  "homepage": "https://adityadahal.github.io/react-travel",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
