--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-travel",
-  "homepage": "https://adityadahal.github.io/holiday-react",
+  "homepage": "https://adityadahal.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
